# stui

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SCAFFOLD_TODOS.md  plugins.json
aria2/: Cargo.toml
aria2/src/: lib.rs  types.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmd/: build.rs  init.rs  install.rs  lint.rs  load.rs  mod.rs  plugin.rs  test.rs
cli/src/template/: Cargo.toml.template  README.md.template  plugin.toml.template
cli/src/template/src/: lib.rs.template
cli/src/template/tests/: basic.rs.template
plugins/: Cargo.toml  README.md
plugins/anilist-provider/: Cargo.toml  plugin.toml
plugins/anilist-provider/src/: lib.rs
plugins/aoty-provider/: Cargo.toml  plugin.toml
plugins/aoty-provider/src/: lib.rs
plugins/discogs-provider/: Cargo.toml  plugin.toml
plugins/discogs-provider/src/: lib.rs
plugins/imdb-provider/: Cargo.toml  plugin.toml
plugins/imdb-provider/src/: lib.rs
plugins/jackett-provider/: Cargo.toml  plugin.toml
plugins/javdb/: Cargo.toml  plugin.toml
plugins/javdb/src/: lib.rs
plugins/kitsu/: Cargo.toml  plugin.toml
plugins/kitsu/src/: lib.rs
plugins/kitsunekko/src/: lib.rs
plugins/lastfm-provider/: Cargo.toml  plugin.toml
plugins/lastfm-provider/src/: lib.rs
plugins/listenbrainz-provider/: Cargo.toml  plugin.toml
plugins/listenbrainz-provider/src/: lib.rs
plugins/musicbrainz-provider/: Cargo.toml  README.md  plugin.toml
plugins/musicbrainz-provider/src/: lib.rs
plugins/musicbrainz-provider/tests/: basic.rs
plugins/omdb-provider/: Cargo.toml  plugin.toml
plugins/omdb-provider/src/: lib.rs
plugins/opensubtitles-provider/: Cargo.toml  plugin.toml
plugins/opensubtitles-provider/src/: lib.rs
plugins/prowlarr-provider/: Cargo.toml  plugin.toml
plugins/qobuz/: Cargo.toml
plugins/r18/: Cargo.toml  plugin.toml
plugins/r18/src/: lib.rs
plugins/roon/: Cargo.toml
plugins/rt-provider/: Cargo.toml  plugin.toml
plugins/rt-provider/src/: lib.rs
plugins/rt-provider/tests/fixtures/: batch_mixed.sse  single_movie_tt0111161.json
plugins/sdk/src/: capabilities.rs  lib.rs  manifest.rs
plugins/soundcloud/src/: lib.rs
plugins/spotify/: Cargo.toml
plugins/subscene/src/: lib.rs
plugins/tidal/: Cargo.toml
plugins/tmdb-provider/: Cargo.toml  plugin.toml
plugins/tmdb-provider/src/: lib.rs
plugins/xmdb-provider/: Cargo.toml  plugin.toml
plugins/xmdb-provider/src/: lib.rs
plugins/xmdb-provider/tests/fixtures/: movies_tt0111161.json  movies_tt0903747.json
plugins/yify-subs/src/: lib.rs
runtime/: .clippy.toml  Cargo.toml  build.rs
runtime/src/: aria2_bridge.rs  catalog.rs  discovery.rs  error.rs  indexer.rs  ipc_batcher.rs  lib.rs  logging.rs  main.rs  plugin.rs  resolver.rs  roon.rs  sandbox.rs  scraper.rs  streamer.rs  theme_watcher.rs
runtime/src/abi/: host.rs  mod.rs  supervisor.rs  types.rs
runtime/src/anime_bridge/: enrich.rs  fetch.rs  index.rs  mod.rs
runtime/src/auth/: browser.rs  callback_server.rs  localhost_cert.pem  localhost_key.pem  mod.rs
runtime/src/cache/: metadata.rs  metadata_key.rs  mod.rs  persistent.rs  search.rs  streams.rs
runtime/src/catalog_engine/: aggregator.rs  filters.rs  mod.rs  ranking.rs
runtime/src/config/: loader.rs  manager.rs  migrate.rs  mod.rs  secrets.rs  secrets_enc.rs  types.rs
runtime/src/dsp/: command.rs  config.rs  convolution.rs  crossfeed.rs  dc_offset.rs  dither.rs  dsd.rs  eq.rs  lufs.rs  mid_side.rs  mod.rs  mpd_config.rs  pipewire.rs  preset_store.rs  profile_store.rs  raat.rs  resample.rs
runtime/src/dsp/NS_filters/: dither.rs  fweighted.rs  gesemann.rs  lipshitz.rs  mod.rs  mod_e_weighted.rs  saw.rs  shibata.rs  tns.rs
runtime/src/dsp/nodes/: crossfeed_node.rs  dc_offset_node.rs  dither_node.rs  eq_node.rs  gain_node.rs  mod.rs  resample_node.rs
runtime/src/dsp/ns_filters/: dither.rs  imp_e_weighted.rs  mod.rs  saw.rs  shibata.rs  tns.rs
runtime/src/dsp/output/: alsa.rs  dsd.rs  mod.rs  pipewire.rs  roon.rs
runtime/src/engine/: dispatch_map.rs  mod.rs  music_enrich.rs  pipeline.rs  search_scoped.rs  subtitles.rs  trace.rs  video_enrich.rs
runtime/src/engine/metadata/: dispatch.rs  merge.rs  mod.rs  sources.rs  wire.rs
runtime/src/events/: bus.rs  event.rs  mod.rs
runtime/src/fanart/: mod.rs
runtime/src/ipc/: mod.rs
runtime/src/ipc/v1/: metadata.rs  mod.rs  stream.rs
runtime/src/lastfm/: album_tracks.rs  mod.rs
runtime/src/mdblist/: mod.rs
runtime/src/media/: episode.rs  id.rs  item.rs  mod.rs  source.rs  stream.rs  track.rs
runtime/src/mediacache/: album_art.rs  mod.rs  store.rs  tag_write_job.rs  tag_writer.rs
runtime/src/mpd_bridge/: bridge.rs  client.rs  mod.rs  mpd_conf.rs  search.rs
runtime/src/pipeline/: config.rs  mod.rs  playback.rs  policy_io.rs  rank.rs  registry.rs  resolve.rs  search.rs
runtime/src/player/: bridge.rs  commands.rs  manager.rs  mod.rs  mpv.rs  state.rs  stui-overlay.lua
runtime/src/plugin/: dispatcher.rs  loader.rs  manifest.rs  mod.rs  rate_limit.rs  state.rs  supervisor.rs
runtime/src/plugin_rpc/: manager.rs  mod.rs  process.rs  protocol.rs  supervisor.rs
runtime/src/providers/: bench_health_bridge.rs  benchmark.rs  capabilities.rs  circuit_breaker.rs  health.rs  mod.rs  throttle.rs
runtime/src/quality/: candidate.rs  mod.rs  policy.rs  score.rs  user_policy.rs
runtime/src/rating_aggregator/: mod.rs
runtime/src/registry/: mod.rs
runtime/src/skipper/: analyzer.rs  detector.rs  fingerprint.rs  mod.rs  store.rs  text_analysis.rs  video_analysis.rs
runtime/src/storage/: aria2_translator.rs  download_translator.rs  mod.rs
runtime/src/stremio/: adapter.rs  client.rs  manifest.rs  mod.rs
runtime/src/torrent_engine/: http_server.rs  mod.rs  session.rs  url.rs
runtime/src/tvdb/: client.rs  http.rs  mod.rs  source.rs  types.rs
runtime/src/watchhistory/: mod.rs  store.rs
runtime/tests/: config_manager_tests.rs  health_throttle_tests.rs  media_tests.rs  pipeline_tests.rs  plugin_hotreload_tests.rs  provider_tests.rs  ranking_tests.rs  ranking_with_health_tests.rs  stream_exhaustion_tests.rs
(+264 files in other folders)
