[workspace]
resolver = "2"
members = [
    "runtime",
    "sdk",
    "aria2",
    "plugins/*",
]
exclude = [
    "plugins/target",
]

# ── Shared dependency versions ────────────────────────────────────────────────
# Using workspace.dependencies lets us keep all version pins in one place.

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
thiserror  = "1"
tracing    = "0.1"
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Workspace-wide profiles ───────────────────────────────────────────────────
# Release profile for runtime, sdk, and aria2 (optimized for speed)
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

# Dev profile for runtime, sdk, and aria2
[profile.dev]
opt-level = 1
