[workspace]
resolver = "2"
members = [
    "runtime",
    "sdk",
    "aria2",
    "cli",
    "plugins/*",
]
exclude = [
    "plugins/target",
    # Stale duplicate of the canonical `sdk/` at workspace root —
    # excluded so cargo doesn't see two `stui-plugin-sdk` crates.
    # Plugins reference the canonical one via `path = "../../sdk"`.
    "plugins/sdk",
]

# ── Shared dependency versions ────────────────────────────────────────────────
# Using workspace.dependencies lets us keep all version pins in one place.

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
thiserror  = "1"
tracing    = "0.1"
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Workspace-wide profiles ───────────────────────────────────────────────────
# Release profile for runtime, sdk, and aria2 (optimized for speed)
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
# Plugins run on wasm32-wasip1 where panic-unwind cannot run drop handlers; the
# old `OnceLock<Mutex<Plugin>>` pattern would leave the mutex permanently
# locked after any verb panic. The SDK now uses `WasmPluginCell` on wasm to
# avoid the mutex entirely, so this profile mirrors the build script's
# nightly `panic_immediate_abort` path on stable.
panic         = "abort"

# Dev profile for runtime, sdk, and aria2
[profile.dev]
opt-level = 1
