[package]
name        = "stui-aria2"
version     = "0.1.0"
edition     = "2021"
description = "aria2c JSON-RPC client for stui — torrents, magnets, HTTP downloads, streaming"

[dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror   = "1"
tracing     = "0.1"
base64      = "0.22"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util      = "0.3"
uuid        = { version = "1", features = ["v4"] }
