# Virtual workspace for WASM plugin builds.
# This is separate from the root workspace so that `cargo build --target
# wasm32-wasip1 --workspace` (run from this directory) only compiles the
# plugin crates + the SDK — it does NOT pull in `stui-runtime`, which depends
# on wasmtime/cranelift and other host-only crates that cannot be compiled
# for wasm32-wasip1.
[workspace]
resolver = "2"
members = [
    "tmdb-provider",
    "omdb-provider",
    "xmdb-provider",
    "rt-provider",
    "anilist-provider",
    "kitsu",
    "discogs-provider",
    "lastfm-provider",
    "musicbrainz-provider",
]
