[package]
name        = "kitsu"
version     = "0.1.0"
edition     = "2021"
description = "stui plugin — anime metadata via Kitsu API"

[lib]
crate-type = ["cdylib"]

[dependencies]
stui-plugin-sdk = { path = "../../sdk" }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

