[package]
name        = "r18"
version     = "0.1.0"
edition     = "2021"
description = "stui plugin — adult video metadata via R18"

[lib]
crate-type = ["cdylib"]

[dependencies]
stui-plugin-sdk = { path = "../../sdk" }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

